2008-10-11   D. V. Wiebe <getdata@ketiltrout.net>  svn:133
	* src/open.c (_GD_Tokenise _GD_ParseFormatLine): Split tokeniser from line
	parser.

2008-10-10   D. V. Wiebe <getdata@ketiltrout.net>  svn:132
	* src/open.c (_GD_ParseFormatFile _GD_ParseFormatLine dirfile_open):
	Properly propagate standards.

2008-10-10   D. V. Wiebe <getdata@ketiltrout.net>  svn:131
	* src/open.c (_GD_ParseFieldSpec): Properly propagate have_first to caller.

	* src/open.c (_GD_ParseFormatFile _GD_ParseFormatLine): Split line
	parsing (now in _GD_ParseFormatLine) from the format file loop (the little
	bit remaining in _GD_ParseFormatFile).

	* bindings/cxx/test/Makefile.am: Properly clean up after tests.

2008-10-10   D. V. Wiebe <getdata@ketiltrout.net>  svn:130
	* src/getdata.h.in: Incorporate a GD_SCALAR_ENTRY flag in gd_entype_t.
	* src/field_list.c (get_nvectors) src/neta_list.c (get_nmeta_vectors):
	Use GD_SCALAR_ENTRY.

	* src/add.c (_GD_Add): Properly initialise the meta field lists in the private
	entry to prevent crash on error.  (Reported by Matthew Truch)

	* src/raw.c (_GD_RawTouch): Add mode to open call (patch from Matthew
	Truch).
	
	* src/getdata.h.in: Add GD_E_DIMENSION
	* src/getdata.c src/putdata.c src/spf.c: Detect and fail if a vector type
	contains an input field that's a scalar.

	* src/spf.c (_GD_GetSPF): Removed redunant field_code parameter.

	* src/common.c (_GD_GetEntry): Removed FILEFRAM as an alias for INDEX per
	discussion with Barth.

2008-10-10   D. V. Wiebe <getdata@ketiltrout.net>  svn:129
	* src/entry.c (_GD_FreeE): Renamed from dirfile_free_entry_strings (for
	which a new boilerplate function has been created).  Separated cleaning up
	internal and externally created entries.  Internally, the library now
	uses this function in all places where it used to call
	dirfile_free_entry_strings.

	* src/open.c (_GD_ParseRaw): n_meta should be zero.

	* src/open.c (_GD_ParseFormatFile): fix duplicates check
